[gd_scene load_steps=5 format=3 uid="uid://wgmdsj1sbmja"]

[ext_resource type="Texture2D" uid="uid://kalfq1qem3ak" path="res://assets/first_party/logo/threadbare-logo.png" id="1_hgbs1"]
[ext_resource type="Theme" uid="uid://cvitou84ni7qe" path="res://scenes/ui_elements/components/theme.tres" id="1_vmxej"]
[ext_resource type="Script" uid="uid://bkl8j1as8ylag" path="res://scenes/menus/title/components/main_menu.gd" id="1_xuf5f"]
[ext_resource type="Script" uid="uid://cwjb3x45e2r4k" path="res://addons/git_describe/label/git_describe_label.gd" id="4_snvmp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vmxej")
script = ExtResource("1_xuf5f")

[node name="LogoButtonSplit" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogoContainer" type="MarginContainer" parent="LogoButtonSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 128

[node name="Logo" type="TextureRect" parent="LogoButtonSplit/LogoContainer"]
texture_filter = 2
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_hgbs1")
expand_mode = 5
stretch_mode = 4

[node name="ButtonBoxMargins" type="MarginContainer" parent="LogoButtonSplit"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 128
theme_override_constants/margin_right = 128

[node name="ButtonBox" type="VBoxContainer" parent="LogoButtonSplit/ButtonBoxMargins"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="ContinueButton" type="Button" parent="LogoButtonSplit/ButtonBoxMargins/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigFlatButton"
text = "Continue"
flat = true

[node name="StartButton" type="Button" parent="LogoButtonSplit/ButtonBoxMargins/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigFlatButton"
text = "Start"
flat = true

[node name="OptionsButton" type="Button" parent="LogoButtonSplit/ButtonBoxMargins/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigFlatButton"
text = "Options"
flat = true

[node name="CreditsButton" type="Button" parent="LogoButtonSplit/ButtonBoxMargins/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigFlatButton"
text = "Credits"
flat = true

[node name="QuitButton" type="Button" parent="LogoButtonSplit/ButtonBoxMargins/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigFlatButton"
text = "Exit Game"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -68.0
grow_horizontal = 0
grow_vertical = 0

[node name="GitDescribeLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("4_snvmp")
setting_name = "addons/git_describe/describe_setting_path"
default_value = "application/config/git_describe"
metadata/_custom_type_script = "uid://cwjb3x45e2r4k"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="LogoButtonSplit/ButtonBoxMargins/ButtonBox/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="LogoButtonSplit/ButtonBoxMargins/ButtonBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="LogoButtonSplit/ButtonBoxMargins/ButtonBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="LogoButtonSplit/ButtonBoxMargins/ButtonBox/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="LogoButtonSplit/ButtonBoxMargins/ButtonBox/QuitButton" to="." method="_on_quit_button_pressed"]
